--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,18 +11,26 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
     "@fontsource/google-sans-flex": "^5.2.1",
+    "@langchain/langgraph": "^1.0.7",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
+    "firebase": "^12.7.0",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.26",
+    "langchain": "^1.2.3",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
+    "papaparse": "^5.5.3",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
