--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
     "@fontsource/google-sans-flex": "^5.2.1",
+    "@google-cloud/text-to-speech": "^6.4.0",
+    "@google-cloud/text-to-speech": "^5.6.0",
     "@google/generative-ai": "^0.24.1",
     "@langchain/langgraph": "^1.0.7",
     "@radix-ui/react-dialog": "^1.1.15",
