--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
     "@fontsource/google-sans-flex": "^5.2.1",
-    "@google-cloud/text-to-speech": "^6.4.0",
     "@google-cloud/text-to-speech": "^5.6.0",
     "@google/generative-ai": "^0.24.1",
     "@langchain/langgraph": "^1.0.7",
@@ -26,6 +25,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "papaparse": "^5.5.3",
+    "pdf-parse-new": "^2.0.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "xlsx": "^0.18.5"
