--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@fontsource/google-sans-flex": "^5.2.1",
     "@google-cloud/text-to-speech": "^5.6.0",
     "@google/generative-ai": "^0.24.1",
+    "@langchain/core": "^1.1.8",
+    "@langchain/google-genai": "^2.1.3",
     "@langchain/langgraph": "^1.0.7",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-tooltip": "^1.2.8",
