--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@langchain/langgraph": "^1.0.7",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "firebase": "^12.7.0",
@@ -33,6 +34,9 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "recharts": "^3.6.0",
+    "swr": "^2.3.8",
+    "tailwind-merge": "^3.4.0",
     "twilio": "^5.11.1",
     "xlsx": "^0.18.5"
   },
